--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
+  background-color: #f5f5f5;
 }
 
 .App-logo {
@@ -35,4 +36,75 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+/* Custom Css */
+*{ 
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+}
+.headerBar{
+  display: flex;
+  justify-content: space-between;
+  background-color: #282c34;
+  color: white;
+}
+
+.headerBar h3 {
+  padding: 20px;
+}
+.headerBar a {
+  text-decoration: none;
+  color: white;
+}
+.navBar{
+  display: flex;
+}
+.navBar h5 {
+  padding: 20px 20px 20px 0;
+}
+
+.searchBar{
+  /* margin: 10px 0 10px 0 ; */
+  /* padding: 10px 0 10px 0 ; */
+  padding: 10px;
+  margin: 10px;
+  min-height: 100vh;
+}
+.searchArea{
+  margin: 10px;
+  text-align: center;
+}
+.searchInput{
+  width: 15rem;
+  height: 2rem;
+  border-radius: 5px;
+  border: none;
+  background-color: #fff;
+  padding: 0 5px 0 5px;
+}
+
+.searchBtn{
+  width: 5rem;
+  height: 2rem;
+  background-color: #282c34;
+  color: white;
+  border-radius: 5px;
+  border: none ;
+}
+
+
+.card{
+  background-color: #fff;
+  padding: 1rem;
+  margin:10px 0 10px 0;
+  border-radius: 5px;
+  box-shadow:  0 4px 8px rgba(0,0,0,.1);;
+}
+
+.historyContainer{
+  padding: 10px;
 }
